--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!----------------------------------green pot------------------>
       <div class="card" id="green">
         <div class="item-img" id="green-item">
-          <img src="potionsmll.png" />
+          <img src="./img/potionsmll.png" />
         </div>
         <div class="item-description" id="green-description">
           <h1>Green Potion</h1>
@@ -27,7 +27,7 @@
       <!-------------------------------------blue pot--------------->
       <div class="card" id="blue">
         <div class="item-img" id="blue-item">
-          <img src="mana-potionsm.png" />
+          <img src="./img/mana-potionsm.png" />
         </div>
         <div class="item-description" id="blue-description">
           <h1>Blue Potion</h1>
@@ -39,7 +39,7 @@
       <!-------------------------------------purple pot--------------->
       <div class="card" id="purple">
         <div class="item-img" id="purple-item">
-          <img src="expPotion.png" />
+          <img src="./img/expPotion.png" />
         </div>
         <div class="item-description" id="purple-description">
           <h1>Purple Potion</h1>
