Change html for description

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="item-description" id="green-description">
           <h1>Green Potion</h1>
-          <h4>Recovers 500 HP on consumption</h4>
-          <h3>Price : 499 tokens per bottle</h3>
+          <p>Recovers 500 HP on consumption</p>
+          <p>Price : 499 tokens per bottle</p>
           <h1 class="buy">Purchase</h1>
         </div>
       </div>
@@ -31,8 +31,8 @@
         </div>
         <div class="item-description" id="blue-description">
           <h1>Blue Potion</h1>
-          <h4>Recovers 200 MP on consumption</h4>
-          <h3>Price : 399 tokens per bottle</h3>
+          <p>Recovers 200 MP on consumption</p>
+          <p>Price : 399 tokens per bottle</p>
           <h1 class="buy">Purchase</h1>
         </div>
       </div>
@@ -43,8 +43,8 @@
         </div>
         <div class="item-description" id="purple-description">
           <h1>Purple Potion</h1>
-          <h4>Recovers 100 Stamina on consumption</h4>
-          <h3>Price : 499 tokens per bottle</h3>
+          <p>Recovers 100 Stamina on consumption</p>
+          <p>Price : 499 tokens per bottle</p>
           <h1 class="buy">Purchase</h1>
         </div>
       </div>
